Update app.json to include config var for Atoti+ license

--- a/app.json
+++ b/app.json
@@ -24,6 +24,14 @@
     "PYTHON_RUNTIME_VERSION": {
       "description": "The Python version to use (should be a pinned version compatible with the one declared in pyproject.toml).",
       "value": "3.9.9"
+    },
+    "POETRY_HTTP_BASIC_ATOTI_PLUS_USERNAME":{
+      "description": "Atoti+ username",
+      "value": ""
+    },
+    "POETRY_HTTP_BASIC_ATOTI_PLUS_PASSWORD":{
+      "description": "Atoti+ password",
+      "value":""
     }
   }
 }
